[gd_scene load_steps=12 format=3 uid="uid://hyxhkjedpfpg"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_s5kxg"]
[ext_resource type="Texture2D" uid="uid://7d5spmkrrlhn" path="res://assets/Heart .png" id="2_4843w"]
[ext_resource type="Texture2D" uid="uid://bu04q560ya26r" path="res://assets/double_jump_item.png" id="3_plnr3"]
[ext_resource type="Texture2D" uid="uid://c3puj1pwdj275" path="res://assets/Background.png" id="4_73gyv"]
[ext_resource type="Texture2D" uid="uid://bq85mv6c8wxlu" path="res://assets/dash_item.png" id="4_re4hg"]
[ext_resource type="Texture2D" uid="uid://3niovah8888l" path="res://assets/Pickaxe.png" id="5_tfvlf"]
[ext_resource type="Texture2D" uid="uid://bhbhdmrnxmnl" path="res://assets/key .png" id="6_qk7ii"]
[ext_resource type="Texture2D" uid="uid://cdawx7pt3inj3" path="res://assets/sound-icon.png" id="7_mhy4f"]

[sub_resource type="LabelSettings" id="LabelSettings_pb3f3"]
font_size = 39

[sub_resource type="LabelSettings" id="LabelSettings_17lkc"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_rdmgv"]
font_size = 32

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_s5kxg")

[node name="Hud" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00251195
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Lives" type="HBoxContainer" parent="Hud"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="L1" type="TextureRect" parent="Hud/Lives"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_4843w")

[node name="L2" type="TextureRect" parent="Hud/Lives"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_4843w")

[node name="L3" type="TextureRect" parent="Hud/Lives"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_4843w")

[node name="VBoxContainer" type="VBoxContainer" parent="Hud"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="DoubleJump" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2

[node name="DoubleJump" type="TextureRect" parent="Hud/VBoxContainer/DoubleJump"]
layout_mode = 2
texture = ExtResource("3_plnr3")

[node name="Label" type="Label" parent="Hud/VBoxContainer/DoubleJump"]
layout_mode = 2
text = "Space"

[node name="Dash" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2

[node name="Dash" type="TextureRect" parent="Hud/VBoxContainer/Dash"]
layout_mode = 2
texture = ExtResource("4_re4hg")

[node name="Label" type="Label" parent="Hud/VBoxContainer/Dash"]
layout_mode = 2
text = "Shift"

[node name="Pickaxe" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2

[node name="Pickaxe" type="TextureRect" parent="Hud/VBoxContainer/Pickaxe"]
layout_mode = 2
texture = ExtResource("5_tfvlf")

[node name="Label" type="Label" parent="Hud/VBoxContainer/Pickaxe"]
layout_mode = 2
text = "LMB"

[node name="Key" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2

[node name="Key" type="TextureRect" parent="Hud/VBoxContainer/Key"]
layout_mode = 2
texture = ExtResource("6_qk7ii")

[node name="Label" type="Label" parent="Hud/VBoxContainer/Key"]
layout_mode = 2
text = "F"

[node name="VBoxContainer2" type="VBoxContainer" parent="Hud"]
layout_mode = 2

[node name="Label" type="Label" parent="Hud/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Interact - F"

[node name="Label2" type="Label" parent="Hud/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Map - M"

[node name="DimRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150

[node name="Label" type="Label" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"
label_settings = SubResource("LabelSettings_pb3f3")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="Menu" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/Menu"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Menu/MarginContainer/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_mhy4f")

[node name="VolumeSlider" type="HSlider" parent="Menu/MarginContainer/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -10.0
max_value = 10.0

[node name="Resume" type="Button" parent="Menu/MarginContainer/Menu"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="StartMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMenuBackground" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_73gyv")

[node name="StartMenu" type="MarginContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00251195
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/StartMenu"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 75

[node name="Label" type="Label" parent="StartMenu/StartMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Inside Earth"
label_settings = SubResource("LabelSettings_17lkc")

[node name="Label2" type="Label" parent="StartMenu/StartMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "The earth has turned inside out!"

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="StartGame" type="Button" parent="StartMenu/StartMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="DeathMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -118.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 130

[node name="Label" type="Label" parent="DeathMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "You Died!"
label_settings = SubResource("LabelSettings_rdmgv")

[node name="MarginContainer" type="MarginContainer" parent="DeathMenu"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="DeathMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="RespawnButton" type="Button" parent="DeathMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="QuitButton" type="Button" parent="DeathMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="drag_ended" from="Menu/MarginContainer/Menu/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="drag_started" from="Menu/MarginContainer/Menu/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_started"]
[connection signal="button_down" from="Menu/MarginContainer/Menu/Resume" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Menu/MarginContainer/Menu/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="StartMenu/StartMenu/VBoxContainer/MarginContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="DeathMenu/MarginContainer/VBoxContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="DeathMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
